# JDev

./: Cargo.toml
src/: lib.rs  main.rs
src/cli/: commands.rs  handlers.rs  mod.rs
src/db/: queries.rs
src/services/: entry.rs
