[package]
name = "jdev"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
clap = { version = "4.5.60", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.32"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"]}
tokio = { version = "1.49.0", features = ["full"] }
